--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,19 +1,28 @@
-# Kích hoạt RGB Underglow
+# ===== Bluetooth (NRF52840) =====
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_DEVICE_NAME="Corne ZMK"
+CONFIG_BT_DEVICE_APPEARANCE=961
+CONFIG_SETTINGS=y
+CONFIG_NVS=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+
+# ===== Power / Sleep =====
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
+CONFIG_LOG=n
+
+# ===== Display & RGB =====
+CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50    
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5    
+# ===== USB (tuỳ chọn) =====
+CONFIG_USB=y
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_ZMK_USB_LOGGING=n
 
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-
-# Kích hoạt màn hình OLED
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
+# ===== Debounce =====
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
