--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -9,20 +9,24 @@ CONFIG_NVS=y
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 
 # ===== Power / Sleep =====
+# 30s idle (để comment ở dòng riêng, tránh lỗi Kconfig)
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000   # 30s idle
-CONFIG_LOG=n                          # tắt log tiết kiệm pin
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
+CONFIG_LOG=n
 
 # ===== Display & RGB =====
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 
-# ===== USB (tuỳ chọn) =====
-CONFIG_USB=y
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_ZMK_USB_LOGGING=n
+# ===== USB =====
+# TẮT để tránh lỗi trên bàn phím split (peripheral)
+# CONFIG_ZMK_USB is not set
+# CONFIG_USB_DEVICE_STACK is not set
 
 # ===== Debounce =====
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
