--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -17,11 +17,9 @@ CONFIG_LOG=n
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 
-# ===== USB (tuỳ chọn) =====
-CONFIG_USB=y
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_ZMK_USB_LOGGING=n
+# ===== USB (tắt trên nửa phải) =====
+# CONFIG_ZMK_USB is not set
+# CONFIG_USB_DEVICE_STACK is not set
 
 # ===== Debounce =====
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
