--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -9,7 +9,6 @@ CONFIG_NVS=y
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 
 # ===== Power / Sleep =====
-# 30s idle (để comment ở dòng riêng, tránh lỗi Kconfig)
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
 CONFIG_LOG=n
@@ -17,16 +16,15 @@ CONFIG_LOG=n
 # ===== Display & RGB =====
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
+# Số LED underglow cho MỖI NỬA
+CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
+# Tuỳ chọn: thứ tự màu (thường RGB hoặc GRB)
+CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
 
-# ===== USB =====
-# TẮT để tránh lỗi trên bàn phím split (peripheral)
+# ===== USB (tắt để tránh xung đột ở split) =====
 # CONFIG_ZMK_USB is not set
 # CONFIG_USB_DEVICE_STACK is not set
 
 # ===== Debounce =====
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
-
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
