--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -16,6 +16,8 @@ CONFIG_LOG=n
 # ===== Display & RGB =====
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
+CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
 
 # ===== USB (tắt trên nửa phải) =====
 # CONFIG_ZMK_USB is not set
