--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -18,7 +18,7 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 # Số LED underglow cho MỖI NỬA
 CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
-# Tuỳ chọn: thứ tự màu (thường RGB hoặc GRB)
+# Thứ tự màu mặc định
 CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
 
 # ===== USB (tắt để tránh xung đột ở split) =====
