--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -16,10 +16,13 @@ CONFIG_LOG=n
 # ===== Display & RGB =====
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
-# Số LED underglow cho MỖI NỬA
 CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
-# Thứ tự màu mặc định
 CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
+
+# ===== LED driver (WS2812 via SPI) =====
+CONFIG_LED_STRIP=y
+CONFIG_WS2812_STRIP=y
+CONFIG_SPI=y
 
 # ===== USB (tắt để tránh xung đột ở split) =====
 # CONFIG_ZMK_USB is not set
