--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -19,6 +19,11 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
 CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
 
+# ===== LED driver (WS2812 via SPI) =====
+CONFIG_LED_STRIP=y
+CONFIG_WS2812_STRIP=y
+CONFIG_SPI=y
+
 # ===== USB (tắt trên nửa phải) =====
 # CONFIG_ZMK_USB is not set
 # CONFIG_USB_DEVICE_STACK is not set
