--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,33 +1,25 @@
-# ===== Bluetooth (NRF52840) =====
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
-CONFIG_BT_MAX_CONN=5
-CONFIG_BT_DEVICE_NAME="Corne ZMK"
-CONFIG_BT_DEVICE_APPEARANCE=961
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
 CONFIG_SETTINGS=y
 CONFIG_NVS=y
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+CONFIG_BT_DEVICE_NAME="Corne ZMK"
+CONFIG_BT_MAX_CONN=5
 
-# ===== Power / Sleep =====
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
-CONFIG_LOG=n
-
-# ===== Display & RGB =====
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_LEDS=12
-CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_RGB=y
+CONFIG_ZMK_RGB_UNDERGLOW_LEDS=27
+CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_GRB=y
 
-# ===== LED driver (WS2812 via SPI) =====
 CONFIG_LED_STRIP=y
 CONFIG_WS2812_STRIP=y
 CONFIG_SPI=y
 
-# ===== USB (tắt để tránh xung đột ở split) =====
-# CONFIG_ZMK_USB is not set
-# CONFIG_USB_DEVICE_STACK is not set
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=60000
+CONFIG_LOG=n
 
-# ===== Debounce =====
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
