--- a/build.yaml
+++ b/build.yaml
@@ -1,13 +1,92 @@
-# build.yaml
-include:
-  # LEFT
-  - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view
-    cmake-args: -DCONFIG_ZMK_DISPLAY=y -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: corne_left
+name: Build
 
-  # RIGHT
-  - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view
-    cmake-args: -DCONFIG_ZMK_DISPLAY=y -DCONFIG_ZMK_RGB_UNDERGLOW=y
-    artifact-name: corne_right
+on: [push, pull_request, workflow_dispatch]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    container:
+      image: zmkfirmware/zmk-build-arm:stable
+    name: Build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Cache west modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-zephyr-modules
+        with:
+          path: |
+            modules/
+            tools/
+            zephyr/
+            bootloader/
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config/west.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      
+      - name: West Init
+        run: west init -l config
+      
+      - name: West Update
+        run: west update
+      
+      - name: West Zephyr export
+        run: west zephyr-export
+      
+      - name: West Build (Corne Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      
+      - name: Rename zmk.uf2 to corne_left.uf2
+        run: cp build/zephyr/zmk.uf2 corne_left.uf2
+      
+      - name: Archive (Corne Left)
+        uses: actions/upload-artifact@v4
+        with:
+          name: corne_left
+          path: corne_left.uf2
+      
+      - name: West Build (Corne Right)
+        run: |
+          rm -rf build
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      
+      - name: Rename zmk.uf2 to corne_right.uf2
+        run: cp build/zephyr/zmk.uf2 corne_right.uf2
+      
+      - name: Archive (Corne Right)
+        uses: actions/upload-artifact@v4
+        with:
+          name: corne_right
+          path: corne_right.uf2
+      
+      - name: West Build (Corne Dongle)
+        run: |
+          rm -rf build
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_dongle -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      
+      - name: Rename zmk.uf2 to corne_dongle.uf2
+        run: cp build/zephyr/zmk.uf2 corne_dongle.uf2
+      
+      - name: Archive (Corne Dongle)
+        uses: actions/upload-artifact@v4
+        with:
+          name: corne_dongle
+          path: corne_dongle.uf2
+      
+      - name: West Build (Settings Reset)
+        run: |
+          rm -rf build
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=settings_reset -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      
+      - name: Rename zmk.uf2 to settings_reset.uf2
+        run: cp build/zephyr/zmk.uf2 settings_reset.uf2
+      
+      - name: Archive (Settings Reset)
+        uses: actions/upload-artifact@v4
+        with:
+          name: settings_reset
+          path: settings_reset.uf2
