--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,30 +1,30 @@
-CONFIG_BT=y
+# Battery Configuration - 2000mAh
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+# Bluetooth Configuration
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_SETTINGS=y
-CONFIG_NVS=y
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
-CONFIG_BT_DEVICE_NAME="Corne Right"
-CONFIG_BT_MAX_CONN=5
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Display Configuration
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
+# RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_LEDS=27
-CONFIG_ZMK_RGB_UNDERGLOW_COLOR_ORDER_GRB=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-CONFIG_LED_STRIP=y
 CONFIG_WS2812_STRIP=y
-CONFIG_SPI=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
+# Power Management - Tối ưu cho pin 2000mAh
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
-CONFIG_LOG=n
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=3
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
-
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# USB
+CONFIG_ZMK_USB=y
