add layout f1->f12, turn off passkey

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -17,3 +17,16 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 # Kích hoạt màn hình OLED
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
+
+# Quan trọng: Tắt vai trò Central, biến nó thành Peripheral
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n 
+
+# Các cấu hình Sleep
+CONFIG_ZMK_SLEEP=y
+
+# Tắt yêu cầu Passkey nhập tay (thường ZMK đã mặc định tắt, nhưng thêm để chắc chắn)
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+
+# Kích hoạt các tính năng kết nối thử nghiệm ổn định hơn
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
