--- a/build.yaml
+++ b/build.yaml
@@ -3,3 +3,8 @@ include:
     shield: corne_left nice_oled
   - board: nice_nano_v2
     shield: corne_right nice_oled
+  - board: nice_nano_v2
+    shield: settings_reset 
+  - board: nice_nano_v2
+    shield: corne_dongle nice_oled 
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
