--- a/build.yaml
+++ b/build.yaml
@@ -4,7 +4,6 @@ include:
   - board: nice_nano_v2
     shield: corne_right nice_oled
   - board: nice_nano_v2
-    shield: settings_reset 
-  - board: nice_nano_v2
-    shield: corne_dongle nice_oled 
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+    shield: corne_left nice_oled
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+    artifact-name: corne_dongle
