--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,5 @@ include:
     shield: corne_left nice_oled
     cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
     artifact-name: corne_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
