--- a/config/corne_dongle.conf
+++ b/config/corne_dongle.conf
@@ -1,22 +1,23 @@
-# Cấu hình Dongle làm máy chủ (Central)
+# --- CẤU HÌNH VAI TRÒ CENTRAL (CHỦ) ---
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-
-# Tắt chế độ Deep Sleep cho Dongle (vì nó cắm nguồn liên tục)
-CONFIG_ZMK_SLEEP=n
-
-# Tăng công suất phát bluetooth để kết nối ổn định hơn
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Số lượng thiết bị ngoại vi tối đa (Trái + Phải = 2)
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+# Số lượng thiết bị phụ: 2 (Trái + Phải)
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
-# Màn hình OLED cho Dongle (nếu Dongle có màn hình)
+# --- KẾT NỐI ---
+# Bluetooth hỗ trợ 5 thiết bị
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_MAX_PAIRED=5
+# Tăng công suất phát Bluetooth để xuyên vật cản tốt hơn
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# --- HỆ THỐNG ---
+# Dongle cắm nguồn liên tục nên KHÔNG BAO GIỜ NGỦ
+CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_DISPLAY=y
 
-# Tắt yêu cầu Passkey nhập tay (thường ZMK đã mặc định tắt, nhưng thêm để chắc chắn)
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-
-# Kích hoạt các tính năng kết nối thử nghiệm ổn định hơn
+CONFIG_ZMK_KEYBOARD_NAME="niis"
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
