--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,32 +1,31 @@
-# Kích hoạt RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50    
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5             
-
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-
-# Kích hoạt màn hình OLED
+# --- CẤU HÌNH TÊN & MÀN HÌNH ---
+CONFIG_ZMK_KEYBOARD_NAME="niis"
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
+# Sử dụng widget mặc định nếu nice_oled gặp lỗi, nhưng vẫn ưu tiên nice_oled
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# Quan trọng: Tắt vai trò Central, biến nó thành Peripheral
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n 
+# --- CẤU HÌNH LED UNDERGLOW (ĐẸP & TỐI ƯU) ---
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+# Tự động tắt LED khi không gõ phím (Tiết kiệm pin cực tốt)
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# Tắt nguồn LED hoàn toàn khi màn hình tắt (Bắt buộc với pin 2000mAh)
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-# Các cấu hình Sleep
+# Hiệu ứng mặc định (2 = Rainbow Swirl rất đẹp)
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+
+# --- KẾT NỐI (PERIPHERAL) ---
+# Mảnh trái là NÔ LỆ (Peripheral) của Dongle
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+# --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-
-# Tắt yêu cầu Passkey nhập tay (thường ZMK đã mặc định tắt, nhưng thêm để chắc chắn)
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-
-# Kích hoạt các tính năng kết nối thử nghiệm ổn định hơn
+# Thời gian ngủ sâu: 30 phút (1.800.000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
