corne config firmware

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,30 +1,27 @@
 # --- CẤU HÌNH TÊN & MÀN HÌNH ---
 CONFIG_ZMK_KEYBOARD_NAME="niis"
 CONFIG_ZMK_DISPLAY=y
-# Sử dụng widget mặc định nếu nice_oled gặp lỗi, nhưng vẫn ưu tiên nice_oled
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# --- CẤU HÌNH LED UNDERGLOW (ĐẸP & TỐI ƯU) ---
+# --- CẤU HÌNH LED UNDERGLOW ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-# Tự động tắt LED khi không gõ phím (Tiết kiệm pin cực tốt)
+# Tự động tắt LED khi không gõ phím (Tiết kiệm pin)
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# Tắt nguồn LED hoàn toàn khi màn hình tắt (Bắt buộc với pin 2000mAh)
+# Ngắt nguồn hoàn toàn LED khi tắt (Quan trọng cho pin 2000mAh)
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-# Hiệu ứng mặc định (2 = Rainbow Swirl rất đẹp)
+# Hiệu ứng mặc định
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 
 # --- KẾT NỐI (PERIPHERAL) ---
-# Mảnh trái là NÔ LỆ (Peripheral) của Dongle
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-# Thời gian ngủ sâu: 30 phút (1.800.000ms)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
