--- a/build.yaml
+++ b/build.yaml
@@ -3,10 +3,21 @@ include:
     shield: corne_left nice_oled
   - board: nice_nano_v2
     shield: corne_right nice_oled
+  # --- CẤU HÌNH DONGLE ---
   - board: nice_nano_v2
     shield: corne_left nice_oled
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2 -DCONF_FILE=config/corne_dongle.conf
     artifact-name: corne_dongle
+    # Cấu hình trực tiếp tại đây để fix lỗi đường dẫn
+    cmake-args: >
+      -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y 
+      -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2 
+      -DCONFIG_ZMK_SLEEP=n 
+      -DCONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
+      -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y 
+      -DCONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+      -DCONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+      -DCONFIG_ZMK_KEYBOARD_NAME="niis"
+      
   - board: nice_nano_v2
     shield: settings_reset
