corne config firmware

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -17,7 +17,7 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# LƯU Ý: Đã xóa dòng ZMK_IDLE_SLEEP_TIMEOUT ở đây
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
