--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -6,9 +6,9 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # --- CẤU HÌNH LED UNDERGLOW ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-# Tự động tắt LED khi không gõ phím (Tiết kiệm pin)
+# Tự động tắt LED khi không gõ phím
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# Ngắt nguồn hoàn toàn LED khi tắt (Quan trọng cho pin 2000mAh)
+# Ngắt nguồn hoàn toàn LED khi tắt
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # Hiệu ứng mặc định
@@ -22,7 +22,7 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# LƯU Ý: Đã xóa dòng ZMK_IDLE_SLEEP_TIMEOUT ở đây để chuyển sang build.yaml
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
