--- a/boards/shields/corne/corne.dtsi
+++ b/boards/shields/corne/corne.dtsi
@@ -1,16 +1,31 @@
 /*
  * Copyright (c) 2020 Pete Johanson
- *
  * SPDX-License-Identifier: MIT
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <layouts/foostan/corne/6column.dtsi>
 
-&foostan_corne_6col_layout {
-    transform = <&default_transform>;
-};
+/ {
+    chosen {
+        zephyr,display = &oled;
+        zmk,kscan = &kscan0;
+        zmk,physical-layout = &foostan_corne_6col_layout;
+        zmk,underglow = &led_strip;
+    };
 
+    default_transform: keymap_transform_0 {
+        compatible = "zmk,matrix-transform";
+        columns = <12>;
+        rows = <4>;
+        map = <
+            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)   RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
+            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)   RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
+            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)   RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
+                            RC(3,3) RC(3,4) RC(3,5)   RC(3,6) RC(3,7) RC(3,8)
+        >;
+    };
+};
 
 &pro_micro_i2c {
     status = "okay";
@@ -41,38 +56,4 @@
                 <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
                 <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
                 <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
-
-    // Bạn có thể thêm column-gpios ở đây nếu cần
-};
-
-&rgb_underglow {
-    compatible = "zmk,rgb-leds";
-    status = "okay";
-
-    default-brightness = <50>;
-    default-hue = <120>;
-    default-saturation = <100>;
-    default-effect = <2>;
-
-    led-nodes = <&led_left &led_right>;
-};
-
-&{chosen} {
-    zephyr,display = &oled;
-    zmk,kscan = &kscan0;
-    zmk,physical-layout = &foostan_corne_6col_layout;
-};
-
-default_transform: keymap_transform_0 {
-    compatible = "zmk,matrix-transform";
-    columns = <12>;
-    rows = <4>;
-
-    // Layout hiển thị vị trí các switch
-    map = <
-        RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)   RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
-        RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)   RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-        RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)   RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-                            RC(3,3) RC(3,4) RC(3,5)   RC(3,6) RC(3,7) RC(3,8)
-    >;
 };
