corne config firmware

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -6,10 +6,12 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # --- CẤU HÌNH LED UNDERGLOW ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-# Tự động tắt LED khi không gõ phím
+# Tự động tắt ánh sáng LED khi không gõ (Màn hình và LED sẽ tối đi)
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# Ngắt nguồn hoàn toàn LED khi tắt
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# [QUAN TRỌNG - ĐÃ SỬA]
+# Đổi từ 'n' thành 'y'. Giữ nguồn điện luôn bật để màn hình sẵn sàng sáng lại ngay
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
 # Hiệu ứng mặc định
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
@@ -17,12 +19,13 @@ CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 
-# --- KẾT NỐI (PERIPHERAL) ---
+# --- KẾT NỐI ---
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-# LƯU Ý: Đã xóa dòng ZMK_IDLE_SLEEP_TIMEOUT ở đây để chuyển sang build.yaml
+# Tăng thời gian chờ tắt màn hình lên 60 giây (60000ms) cho đỡ khó chịu
+CONFIG_ZMK_IDLE_TIMEOUT=60000
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
