--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -7,17 +7,20 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# [QUAN TRỌNG - ĐÃ SỬA]
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
 
-# --- KẾT NỐI (PERIPHERAL) ---
+# --- KẾT NỐI ---
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- PIN & HỆ THỐNG ---
 CONFIG_ZMK_SLEEP=y
-# LƯU Ý: Đã xóa dòng ZMK_IDLE_SLEEP_TIMEOUT ở đây
+CONFIG_ZMK_IDLE_TIMEOUT=60000
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
