fix layout, led

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,19 +1,41 @@
-# Kích hoạt RGB Underglow
+# RGB Underglow (LED gầm)
 CONFIG_ZMK_RGB_UNDERGLOW=y
-
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50    
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5    
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=0
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=80
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
+# External Power
+CONFIG_ZMK_EXT_POWER=y
+
+# Bluetooth
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-# Kích hoạt màn hình OLED
+# OLED Display - TẮT custom để tránh conflict
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+
+# Tối ưu pin 2000mAh
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+# USB (peripheral không cần)
+CONFIG_ZMK_USB=n
+
+# Logging
+CONFIG_ZMK_USB_LOGGING=n
