fix layout , fix led

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,42 +1,47 @@
 # RGB Underglow (LED gầm)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=0
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=80
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+
+# Cấu hình RGB Underglow tiết kiệm pin
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30      # Giảm độ sáng mặc định xuống 30% để tiết kiệm pin
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
+
+# Tự động tắt RGB khi idle để tiết kiệm pin
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000              # Tắt RGB sau 30 giây không hoạt động (30000ms)
 
-# External Power
-CONFIG_ZMK_EXT_POWER=y
-
-# Bluetooth
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+# Kích hoạt RGB per-key (nếu hardware hỗ trợ)
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_START=30          # Độ sáng ban đầu 30%
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y       # Tự động tắt khi idle
 
 # OLED Display - TẮT custom để tránh conflict
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# Tối ưu pin 2000mAh
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+# Tự động tắt OLED khi idle để tiết kiệm pin
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000       # Chuyển sang deep sleep sau 15 phút (900000ms)
+CONFIG_ZMK_DISPLAY_INVERT=n
 
-# USB
-CONFIG_ZMK_USB=y
+# Tối ưu Bluetooth - không cần mật khẩu
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n             # Tắt yêu cầu mật khẩu khi ghép nối
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-# Logging (tắt để tiết kiệm pin)
-CONFIG_ZMK_USB_LOGGING=n
+# Tối ưu công suất Bluetooth để tiết kiệm pin
+CONFIG_BT_CTLR_TX_PWR_MINUS_4=y            # Giảm công suất phát Bluetooth (vẫn đủ tầm hoạt động)
+
+# Tăng thời gian sleep để tiết kiệm pin
+CONFIG_ZMK_SLEEP=y                         # Kích hoạt chế độ deep sleep
+CONFIG_PM_DEVICE=y                         # Kích hoạt quản lý nguồn thiết bị
+
+# Tối ưu hiệu suất pin
+CONFIG_ZMK_BATTERY_REPORTING=y             # Báo cáo mức pin
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60      # Báo cáo pin mỗi 60 giây
+
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
 
