fix layout , fix led

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,46 +1,46 @@
-# RGB Underglow (LED gầm)
+# RGB Underglow (bottom lighting)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-# Cấu hình RGB Underglow tiết kiệm pin
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30      # Giảm độ sáng mặc định xuống 30% để tiết kiệm pin
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
+# Configure RGB Underglow for power saving
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30      # Reduce default brightness to 30% to save battery
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 
-# Tự động tắt RGB khi idle để tiết kiệm pin
+# Automatically turn off RGB when idle (30 seconds)
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000              # Tắt RGB sau 30 giây không hoạt động (30000ms)
+CONFIG_ZMK_IDLE_TIMEOUT=30000              # Turn off RGB after 30 seconds of inactivity (30000 ms)
 
-# Kích hoạt RGB per-key (nếu hardware hỗ trợ)
+# RGB per-key backlight
 CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=30          # Độ sáng ban đầu 30%
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y       # Tự động tắt khi idle
+CONFIG_ZMK_BACKLIGHT_BRT_START=30          # Initial brightness 30%
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y       # Automatically turn off when idle
 
-# OLED Display - TẮT custom để tránh conflict
+# OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# Tự động tắt OLED khi idle để tiết kiệm pin
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000       # Chuyển sang deep sleep sau 15 phút (900000ms)
+# Deep sleep after 15 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000       # Enter deep sleep after 15 minutes (900000 ms)
 CONFIG_ZMK_DISPLAY_INVERT=n
 
-# Tối ưu Bluetooth - không cần mật khẩu
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n             # Tắt yêu cầu mật khẩu khi ghép nối
+# Bluetooth without passkey
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n             # Disable passkey requirement when pairing
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-# Tối ưu công suất Bluetooth để tiết kiệm pin
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y            # Giảm công suất phát Bluetooth (vẫn đủ tầm hoạt động)
+# Reduce Bluetooth transmit power
+CONFIG_BT_CTLR_TX_PWR_MINUS_4=y            # Reduce Bluetooth TX power (still enough range)
 
-# Tăng thời gian sleep để tiết kiệm pin
-CONFIG_ZMK_SLEEP=y                         # Kích hoạt chế độ deep sleep
-CONFIG_PM_DEVICE=y                         # Kích hoạt quản lý nguồn thiết bị
+# Power management
+CONFIG_ZMK_SLEEP=y                         # Enable deep sleep mode
+CONFIG_PM_DEVICE=y                         # Enable device power management
 
-# Tối ưu hiệu suất pin
-CONFIG_ZMK_BATTERY_REPORTING=y             # Báo cáo mức pin
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60      # Báo cáo pin mỗi 60 giây
+# Battery reporting
+CONFIG_ZMK_BATTERY_REPORTING=y             # Report battery level
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60      # Report battery level every 60 seconds
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
