--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -4,7 +4,7 @@ CONFIG_WS2812_STRIP=y
 
 # RGB Underglow configuration optimized for battery life
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30      # Reduce default brightness to 30% to save battery
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
@@ -12,35 +12,35 @@ CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 
 # Automatically turn off RGB when idle to save battery
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000              # Turn off RGB after 30 seconds of inactivity (30000 ms)
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
 # Enable per-key RGB backlight (if hardware supports it)
 CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=30          # Initial brightness 30%
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y       # Automatically turn off when idle
+CONFIG_ZMK_BACKLIGHT_BRT_START=30
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
 # OLED Display - disable custom status screen to avoid conflicts
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Automatically turn off OLED when idle to save battery
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000       # Enter deep sleep after 15 minutes (900000 ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_DISPLAY_INVERT=n
 
 # Optimize Bluetooth - no passkey required
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n             # Disable passkey requirement when pairing
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 # Optimize Bluetooth TX power to save battery
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y            # Reduce Bluetooth transmit power (still enough range)
+CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 
 # Increase sleep usage to save battery
-CONFIG_ZMK_SLEEP=y                         # Enable deep sleep mode
-CONFIG_PM_DEVICE=y                         # Enable device power management
+CONFIG_ZMK_SLEEP=y
+CONFIG_PM_DEVICE=y
 
 # Optimize battery performance
-CONFIG_ZMK_BATTERY_REPORTING=y             # Enable battery level reporting
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60      # Report battery level every 60 seconds
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
