fix layout , fix led

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,41 +1,50 @@
-# RGB Underglow (bottom lighting)
+# RGB Underglow (6 LED gầm mỗi bên)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-# Configure RGB Underglow for power saving
+# Cấu hình RGB Underglow tiết kiệm pin
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
+CONFIG_ZMK_RGB_UNDERVLOW_HUE_STEP=30
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
-
-# Automatically turn off RGB when idle (30 seconds)
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000          
+
+# Kích hoạt per-key RGB (21 LED)
+CONFIG_ZMK_BACKLIGHT=n
+CONFIG_LED_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
 # OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-# Deep sleep after 15 minutes
+# Idle và Sleep
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_DISPLAY_INVERT=n
-
-# Bluetooth without passkey
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n 
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-
-# Reduce Bluetooth transmit power
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y    
-
-# Power management
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 
-# Battery reporting
+# Split keyboard - Peripheral (bên phải)
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_BLE=y
+
+# Bluetooth
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
+
+# Battery reporting chính xác
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_BATTERY_VOLTAGE_DIVIDER=y
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
