--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,41 +1,54 @@
-# RGB Underglow (bottom lighting)
+# RGB Underglow (6 LED gầm mỗi bên)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-# RGB Underglow configuration optimized for battery life
+# Cấu hình RGB Underglow tiết kiệm pin
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
-
-# Automatically turn off RGB when idle to save battery
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000
 
-# OLED Display - disable custom status screen to avoid conflicts
+# Kích hoạt per-key RGB (21 LED)
+CONFIG_ZMK_BACKLIGHT=n
+CONFIG_LED_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+
+# OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-# Automatically turn off OLED when idle to save battery
+# Idle và Sleep
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_DISPLAY_INVERT=n
-
-# Optimize Bluetooth - no passkey required
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-
-# Optimize Bluetooth TX power to save battery
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
-
-# Increase sleep usage to save battery
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 
-# Optimize battery performance
+# Split keyboard qua TRRS + Bluetooth
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE=y
+
+# Bluetooth
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
+
+# USB (cho TRRS)
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
+
+# Battery reporting chính xác
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_BATTERY_VOLTAGE_DIVIDER=y
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
