--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -11,7 +11,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# Kích hoạt per-key RGB (21 LED)
+# Led for per-key RGB (21 LED)
 CONFIG_ZMK_BACKLIGHT=n
 CONFIG_LED_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
@@ -45,10 +45,9 @@ CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
 
-# Battery reporting chính xác
+# Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-CONFIG_ZMK_BATTERY_VOLTAGE_DIVIDER=y
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
