--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -5,13 +5,13 @@ CONFIG_WS2812_STRIP=y
 # Cấu hình RGB Underglow tiết kiệm pin
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
-CONFIG_ZMK_RGB_UNDERVLOW_HUE_STEP=30
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# Kích hoạt per-key RGB (21 LED)
+# Led for per-key RGB (21 LED)
 CONFIG_ZMK_BACKLIGHT=n
 CONFIG_LED_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
@@ -41,10 +41,9 @@ CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 
-# Battery reporting chính xác
+# Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-CONFIG_ZMK_BATTERY_VOLTAGE_DIVIDER=y
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
