fix layout , fix led

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -11,10 +11,10 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# Led for per-key RGB (21 LED)
-CONFIG_ZMK_BACKLIGHT=n
-CONFIG_LED_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+# # Led for per-key RGB (21 LED)
+# CONFIG_ZMK_BACKLIGHT=n
+# CONFIG_LED_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
 # OLED Display
 CONFIG_ZMK_DISPLAY=y
