--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -11,17 +11,13 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# # Led for per-key RGB (21 LED)
-# CONFIG_ZMK_BACKLIGHT=n
-# CONFIG_LED_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-
-# OLED Display
+# OLED Display với custom screen
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
 # Idle và Sleep
 CONFIG_ZMK_IDLE_TIMEOUT=30000
