fix layout , fix led

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -19,11 +19,11 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
-# Idle và Sleep
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_SLEEP=y
-CONFIG_PM_DEVICE=y
+# # Idle và Sleep
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# CONFIG_ZMK_SLEEP=y
+# CONFIG_PM_DEVICE=y
 
 # Split keyboard - Peripheral (bên phải)
 CONFIG_ZMK_SPLIT=y
