fix layout , fix led

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -10,6 +10,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
 # OLED Display với custom screen
 CONFIG_ZMK_DISPLAY=y
@@ -19,11 +20,11 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
-# # Idle và Sleep
-# CONFIG_ZMK_IDLE_TIMEOUT=30000
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-# CONFIG_ZMK_SLEEP=y
-# CONFIG_PM_DEVICE=y
+# Idle và Sleep
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_SLEEP=y
+CONFIG_PM_DEVICE=y
 
 # Split keyboard qua TRRS + Bluetooth
 CONFIG_ZMK_SPLIT=y
@@ -44,6 +45,9 @@ CONFIG_USB_DEVICE_STACK=y
 # Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+# Logging để debug
+CONFIG_ZMK_USB_LOGGING=n
 
 #CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
