--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -3,6 +3,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # Cấu hình RGB Underglow tiết kiệm pin
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
