--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -20,6 +20,7 @@ CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 # Idle và Sleep
 CONFIG_ZMK_IDLE_TIMEOUT=30000
@@ -48,7 +49,5 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 
 # Logging để debug
-CONFIG_ZMK_USB_LOGGING=n
-
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_LOG=y
