--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -49,5 +49,7 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 
 # Logging để debug
-CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG=y
+CONFIG_ZMK_USB_LOGGING=n
+
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
