--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,8 +1,6 @@
-# RGB Underglow (6 LED gầm mỗi bên)
+# RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-
-# Cấu hình RGB Underglow tiết kiệm pin
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
@@ -13,22 +11,22 @@ CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
-# OLED Display với custom screen
+# Custom OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_LVGL_USE_LABEL=y
+CONFIG_LVGL_FONT_MONTSERRAT_16=y
 
-# Idle và Sleep
+# Power Management cho pin 2000mAh
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 
-# Split keyboard - Peripheral (bên phải)
+# Split keyboard - Peripheral
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 CONFIG_ZMK_SPLIT_BLE=y
@@ -40,12 +38,9 @@ CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 
-# Battery reporting
+# Battery - Tối ưu cho 2000mAh
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
 
-# Logging để debug
+# Logging
 CONFIG_ZMK_USB_LOGGING=n
-
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
