--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -14,13 +14,16 @@ CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 # Custom OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Bên trái là Central nên có thể bật widget, nhưng custom screen tự vẽ nên không bắt buộc
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_LVGL_USE_LABEL=y
-CONFIG_LVGL_FONT_MONTSERRAT_16=y
 
-# Power Management cho pin 2000mAh
+# Cấu hình LVGL (Sửa tên biến từ LVGL_ sang LV_)
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_FONT_MONTSERRAT_16=y
+
+# Power Management
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_SLEEP=y
@@ -42,7 +45,7 @@ CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
 
-# Battery - Tối ưu cho 2000mAh
+# Battery
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
 
