--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -14,13 +14,17 @@ CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 # Custom OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_LVGL_USE_LABEL=y
-CONFIG_LVGL_FONT_MONTSERRAT_16=y
 
-# Power Management cho pin 2000mAh
+# TẮT các widget mặc định vì bên phải (Peripheral) không hỗ trợ
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+
+# Cấu hình LVGL (Sửa tên biến từ LVGL_ sang LV_)
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_FONT_MONTSERRAT_16=y
+
+# Power Management
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_SLEEP=y
@@ -38,7 +42,10 @@ CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
 
-# Battery - Tối ưu cho 2000mAh
+# Tắt USB data cho bên phải để tránh warning
+CONFIG_ZMK_USB=n
+
+# Battery
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
 
