--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -14,12 +14,13 @@ CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 # Custom OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-# Bên trái là Central nên có thể bật widget, nhưng custom screen tự vẽ nên không bắt buộc
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
-# Cấu hình LVGL (Sửa tên biến từ LVGL_ sang LV_)
+# Tắt widget mặc định để tránh xung đột với code custom
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+
+# Cấu hình LVGL
 CONFIG_LV_USE_LABEL=y
 CONFIG_LV_FONT_MONTSERRAT_16=y
 
