--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -15,12 +15,12 @@ CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# TẮT các widget mặc định vì bên phải (Peripheral) không hỗ trợ
+# Tắt widget mặc định
 CONFIG_ZMK_WIDGET_LAYER_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
 
-# Cấu hình LVGL (Sửa tên biến từ LVGL_ sang LV_)
+# Cấu hình LVGL
 CONFIG_LV_USE_LABEL=y
 CONFIG_LV_FONT_MONTSERRAT_16=y
 
