fix: screen custome

--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,53 +1,40 @@
-# RGB Underglow
+# ============================================
+#  RIGHT SIDE CONFIGURATION (PERIPHERAL)
+# ============================================
+
+# --- RGB Underglow (Syncs with Left side) ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
-# Custom OLED Display
+# --- OLED Display Settings ---
+# Enable display if the right side has an OLED screen
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Peripheral displays usually show a simple logo or battery status
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-# Tắt widget mặc định
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-
-# Cấu hình LVGL
-CONFIG_LV_USE_LABEL=y
-CONFIG_LV_FONT_MONTSERRAT_16=y
-
-# Power Management
+# --- Power Management ---
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# Sync deep sleep time with the central side
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 
-# Split keyboard - Peripheral
+# --- Split Keyboard Specifics ---
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 CONFIG_ZMK_SPLIT_BLE=y
+# IMPORTANT: Right side is NOT Central. Comment out or set to 'n'
+# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-# Bluetooth
+# --- Bluetooth Connectivity ---
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
+# High transmission power ensures good connection between halves
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# Tắt USB data cho bên phải để tránh warning
-CONFIG_ZMK_USB=n
-
-# Battery
+# --- Battery Reporting ---
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
-
-# Logging
-CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
