--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,54 +1,71 @@
-# RGB Underglow
+# ============================================
+#  LEFT SIDE CONFIGURATION (MASTER / CENTRAL)
+# ============================================
+
+# --- RGB Underglow (LED Strip) ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
+# Turn off RGB when idle to save battery
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+
+# --- RGB Effects & Default State ---
+# Effect 3: Rainbow Swirl (More dynamic than Breathe)
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+# Default brightness (0-100) and speed (1-5)
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
-# Custom OLED Display
+# --- OLED Display Settings ---
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Set to 'n' to use default widgets. Set to 'y' ONLY if you have custom .c code
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 
-# Tắt widget mặc định để tránh xung đột với code custom
-CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+# --- Default Widgets Configuration ---
+# Only active if STATUS_SCREEN_CUSTOM is 'n'
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# Layer status is useful, enabled by default
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
-# Cấu hình LVGL
+# --- LVGL UI Configuration ---
 CONFIG_LV_USE_LABEL=y
-CONFIG_LV_FONT_MONTSERRAT_16=y
+# Use a nicer, readable font (Note: consumes more flash memory)
+CONFIG_LV_FONT_MONTSERRAT_16=n 
 
-# Power Management
+# --- Power Management ---
+# Idle timeout (ms): 30s
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# Deep sleep timeout (ms): 15 minutes (900000ms) - Optimized for battery
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 
-# Split keyboard
+# --- Split Keyboard Specifics ---
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE=y
+# IMPORTANT: Left side acts as the Central (Master) device
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
-# Bluetooth
+# --- Bluetooth Connectivity ---
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-CONFIG_BT_CTLR_TX_PWR_MINUS_4=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# Increase Bluetooth transmission power to max (+8dBm) for stability
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# USB
+# --- USB & Logging ---
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
-
-# Battery
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
-
-# Logging
+# Disable logging to save storage space unless debugging
 CONFIG_ZMK_USB_LOGGING=n
+
+# --- Battery Reporting ---
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
