fix: screen custome

--- a/config/corne_left.conf
+++ b/config/corne_left.conf
@@ -1,47 +1,38 @@
 # ============================================
-#  LEFT SIDE CONFIGURATION (MASTER / CENTRAL)
+#  LEFT SIDE CONFIGURATION (CENTRAL / MASTER)
 # ============================================
+
+# --- Display Settings (Custom Module: zmk-nice-oled) ---
+CONFIG_ZMK_DISPLAY=y
+# Enable custom status screen to let zmk-nice-oled take control
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# CRITICAL: Disable default ZMK widgets to avoid "Multiple Definition" errors
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
 
 # --- RGB Underglow (LED Strip) ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-# Turn off RGB when idle to save battery
+# Turn off RGB when idle to save battery (Essential)
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
-# --- RGB Effects & Default State ---
-# Effect 3: Rainbow Swirl (More dynamic than Breathe)
+# RGB Effects: 3 = Rainbow Swirl (Best looking)
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-# Default brightness (0-100) and speed (1-5)
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
-# --- OLED Display Settings ---
-CONFIG_ZMK_DISPLAY=y
-# Set to 'n' to use default widgets. Set to 'y' ONLY if you have custom .c code
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
-
-# --- Default Widgets Configuration ---
-# Only active if STATUS_SCREEN_CUSTOM is 'n'
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
-# Layer status is useful, enabled by default
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-
-# --- LVGL UI Configuration ---
-CONFIG_LV_USE_LABEL=y
-# Use a nicer, readable font (Note: consumes more flash memory)
-CONFIG_LV_FONT_MONTSERRAT_16=n 
-
 # --- Power Management ---
-# Idle timeout (ms): 30s
+# 30s idle timeout
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-# Deep sleep timeout (ms): 15 minutes (900000ms) - Optimized for battery
+# 15 mins deep sleep timeout
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
@@ -49,7 +40,7 @@ CONFIG_PM_DEVICE=y
 # --- Split Keyboard Specifics ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE=y
-# IMPORTANT: Left side acts as the Central (Master) device
+# LEFT SIDE IS CENTRAL (MASTER)
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # --- Bluetooth Connectivity ---
@@ -57,14 +48,8 @@ CONFIG_BT=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-# Increase Bluetooth transmission power to max (+8dBm) for stability
+# Max power for stable connection
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# --- USB & Logging ---
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
-# Disable logging to save storage space unless debugging
-CONFIG_ZMK_USB_LOGGING=n
 
 # --- Battery Reporting ---
 CONFIG_ZMK_BATTERY_REPORTING=y
