--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -2,23 +2,26 @@
 #  RIGHT SIDE CONFIGURATION (PERIPHERAL)
 # ============================================
 
+# --- Display Settings (Custom Module: zmk-nice-oled) ---
+CONFIG_ZMK_DISPLAY=y
+# Enable custom status screen for the peripheral logo/status
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# CRITICAL: Disable default ZMK widgets
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
+
 # --- RGB Underglow (Syncs with Left side) ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# --- OLED Display Settings ---
-# Enable display if the right side has an OLED screen
-CONFIG_ZMK_DISPLAY=y
-# Peripheral displays usually show a simple logo or battery status
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-
 # --- Power Management ---
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-# Sync deep sleep time with the central side
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
@@ -26,13 +29,12 @@ CONFIG_PM_DEVICE=y
 # --- Split Keyboard Specifics ---
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE=y
-# IMPORTANT: Right side is NOT Central. Comment out or set to 'n'
+# RIGHT SIDE IS NOT CENTRAL
 # CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # --- Bluetooth Connectivity ---
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
-# High transmission power ensures good connection between halves
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # --- Battery Reporting ---
