--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -1,26 +1,20 @@
-# --- CẤU HÌNH TÊN & MÀN HÌNH ---
 CONFIG_ZMK_KEYBOARD_NAME="niis"
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 
-# --- CẤU HÌNH LED UNDERGLOW ---
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50    
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5             
 
-# [QUAN TRỌNG - ĐÃ SỬA]
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=40
-
-# --- KẾT NỐI ---
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-
-# --- PIN & HỆ THỐNG ---
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=60000
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
+
