--- a/config/west.yml
+++ b/config/west.yml
@@ -8,7 +8,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v0.3
       import: app/west.yml
     # support nice_oled and nice_epaper
     - name: zmk-nice-oled
