--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,25 +1,19 @@
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
-
-CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2       
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50    
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100    
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5      
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5             
 
-#CONFIG_ZMK_STUDIO=y
-#CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_SPI=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y                            
-
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
