--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 include:
-  - board: nice_nano@2.0.0
-    shield: corne_left nice_oled
-  - board: nice_nano@2.0.0
-    shield: corne_right nice_oled
-  - board: nice_nano
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
+  - board: nice_nano_v2
     shield: settings_reset
