--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,18 +1,21 @@
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 
+# --- LED SPI ---
 CONFIG_SPI=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-CONFIG_ZMK_SLEEP=n
-CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
+# --- PIN & HỆ THỐNG ---
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_SLEEP=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
+# --- MÀN HÌNH ---
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
